--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     
     <div class="container" id="main-card">
         <div class="gif-container">
-            <img id="main-img" src="photoop.jpg" alt="Cute Bear">
+            <img id="main-img" src="Photoop.jpg" alt="Cute Bear">
         </div>
 
         <h1>My Mochi Kathy 🐶</h1>
@@ -270,3 +270,4 @@
     </script>
 </body>
 </html>
+
