--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 
     <div class="success-message" id="canva-card">
         <div class="container">
-            <iframe class="canva-iframe" src="journeymap.pdf"></iframe>
+            <iframe class="canva-iframe" src="https://www.canva.com/design/DAHA_lPewlE/QifH4umg2aYXMpPxdriJSQ/view"></iframe>
             <p style="margin-top: 20px;">I love every second with you! 💖</p>
         </div>
     </div>
@@ -301,4 +301,5 @@
     </script>
 </body>
 </html>
+
 
